version: "0.0.1"
opam-version: "2.0"
maintainer: "jon@recoil.org"
authors: "various"
license: "ISC"
homepage: "https://github.com/jonludlam/js_top_worker"
bug-reports: "https://github.com/jonludlam/js_top_worker/issues"
depends: [
  "ocaml" {>= "5.1"}
  "dune" {>= "3.10"}
  "mime_printer"
  "rresult"
  "merlin-lib"
  "rpclib"
  "cbort"
  "zarith"
  "bytesrw"
  "js_of_ocaml" {>= "5.0"}
  "js_of_ocaml-ppx" {>= "5.0"}
]
build : [
  ["dune" "subst"] {pinned}
  ["dune" "build" "-p" name "-j" jobs]
]
synopsis: "JS Toplevel worker - RPC functions"
description: """
An OCaml toplevel designed to run as a web worker
"""
pin-depends: [
  [ "mime_printer.dev" "git+https://github.com/jonludlam/mime_printer.git#odoc_notebook" ]
  [ "cbort.dev" "git+https://tangled.org/@anil.recoil.org/ocaml-cbort.git" ]
]
