(executable
 (name example)
 (preprocess
  (pps js_of_ocaml-ppx))
 (modes js)
 (modules example)
 (libraries js_top_worker_client lwt js_of_ocaml))

(executable
 (name example2)
 (preprocess
  (pps js_of_ocaml-ppx))
 (modes js)
 (modules example2)
 (libraries js_top_worker_client lwt js_of_ocaml))

(executable
 (name worker)
 (modes byte)
 (modules worker)
 (link_flags (-linkall))
 (libraries js_top_worker-web logs.browser mime_printer tyxml))

(executable
 (name unix_worker)
 (public_name unix_worker)
 (modes byte)
 (package js_top_worker-unix)
 (modules unix_worker)
 (link_flags (-linkall))
 (libraries js_top_worker logs logs.fmt rpclib.core findlib.top))

(executable
 (name unix_client)
 (public_name unix_client)
 (package js_top_worker-unix)
 (modules unix_client)
 (libraries js_top_worker_client rpclib.cmdliner))

(rule
 (targets
  (dir cmis))
 (action
  (system "mkdir -p cmis; cp %{ocaml_where}/*.cmi cmis")))

(rule
 (targets
  (dir lib))
 (deps mklib.sh)
 (action
  (system "./mklib.sh")))

(rule
 (targets worker.js)
 (deps stubs.js)
 (action
  (run
   %{bin:js_of_ocaml}
   --toplevel
   ; --pretty
   --no-cmis
   --effects=cps
   +toplevel.js
   +dynlink.js
   +bigstringaf/runtime.js
   stubs.js
   %{dep:worker.bc}
   -o
   %{targets})))

(rule
 (targets worker_nocmis.js)
 (deps stubs.js)
 (action
  (run
   %{bin:js_of_ocaml}
   --toplevel
   ; --pretty
   --no-cmis
   --effects=cps
   +toplevel.js
   +dynlink.js
   stubs.js
   %{dep:worker.bc}
   -o
   %{targets})))

(alias
 (name default)
 (deps
  worker.js
  worker_nocmis.js
  index.html
  example.bc.js
  example2.bc.js
  index2.html
  cmis
  server.py
  (alias_rec all)))
