(executable
 (name example)
 (preprocess
  (pps js_of_ocaml-ppx))
 (modes js)
 (modules example)
 (libraries js_top_worker_client lwt js_of_ocaml))

(executable
 (name example2)
 (preprocess
  (pps js_of_ocaml-ppx))
 (modes js)
 (modules example2)
 (libraries js_top_worker_client lwt js_of_ocaml))

(executable
 (name example3)
 (preprocess
  (pps js_of_ocaml-ppx))
 (modes js)
 (modules example3)
 (libraries js_top_worker_client lwt js_of_ocaml))

(executable
 (name example4)
 (preprocess
  (pps js_of_ocaml-ppx))
 (modes js)
 (modules example4)
 (libraries js_top_worker_client lwt js_of_ocaml))

(executable
 (name worker)
 (modes byte)
 (modules worker)
 (link_flags (-linkall))
 (libraries js_top_worker-web logs.browser mime_printer tyxml))

(executable
 (name unix_worker)
 (public_name unix_worker)
 (modes byte)
 (package js_top_worker-unix)
 (modules unix_worker)
 (link_flags (-linkall))
 (libraries js_top_worker logs logs.fmt rpclib.core rpclib.json findlib.top))

(executable
 (name unix_client)
 (public_name unix_client)
 (package js_top_worker-unix)
 (modules unix_client)
 (libraries js_top_worker_client rpclib.cmdliner))

(rule
 (targets
  (dir _opam))
 (action
  (run jtw opam -o _opam stringext)))

(alias
 (name default)
 (deps
  index.html
  example.bc.js
  example2.bc.js
  example3.bc.js
  example4.bc.js
  example5.js
  index2.html
  index3.html
  index4.html
  index5.html
  _opam
  server.py
  (alias_rec all)))
