(executable
 (name example)
 (preprocess
  (pps js_of_ocaml-ppx))
 (modes js)
 (modules example)
 (libraries js_top_worker_client lwt js_of_ocaml))

(executable
 (name example2)
 (preprocess
  (pps js_of_ocaml-ppx))
 (modes js)
 (modules example2)
 (libraries js_top_worker_client lwt js_of_ocaml))

(executable
 (name example3)
 (preprocess
  (pps js_of_ocaml-ppx))
 (modes js)
 (modules example3)
 (libraries js_top_worker_client lwt js_of_ocaml))

(executable
 (name example4)
 (preprocess
  (pps js_of_ocaml-ppx))
 (modes js)
 (modules example4)
 (libraries js_top_worker_client lwt js_of_ocaml))

(executable
 (name worker)
 (modes byte js)
 (modules worker)
 (link_flags (-linkall))
 (js_of_ocaml
  (javascript_files ../lib/stubs.js)
  (flags --effects=disabled --toplevel --opt 3 +toplevel.js +dynlink.js))
 (libraries js_top_worker-web logs.browser mime_printer tyxml))

(executable
 (name unix_worker)
 (public_name unix_worker)
 (modes byte)
 (package js_top_worker-unix)
 (modules unix_worker)
 (link_flags (-linkall))
 (libraries
  unix
  js_top_worker
  logs
  logs.fmt
  rpclib.core
  rpclib.json
  findlib.top
  lwt.unix))

(executable
 (name unix_client)
 (public_name unix_client)
 (package js_top_worker-unix)
 (modules unix_client)
 (libraries js_top_worker_client rpclib.cmdliner))

(rule
 (targets
  (dir _opam))
 (action
  (run jtw opam -o _opam str stringext mime_printer)))

(alias
 (name default)
 (deps
  index.html
  demo.html
  demo.js
  README.md
  example.bc.js
  example2.bc.js
  example3.bc.js
  example4.bc.js
  example5.js
  index2.html
  index3.html
  index4.html
  index5.html
  _opam
  server.py
  (alias_rec all)))
