; Worker library

(library
 (public_name js_top_worker)
 (modules uTop_complete uTop_lexer uTop_token uTop toplexer ocamltop impl)
 (libraries
  logs
  js_top_worker-rpc
  js_of_ocaml-compiler
  js_of_ocaml-ppx
  astring
  mime_printer
  compiler-libs.common
  compiler-libs.toplevel
  merlin-lib.kernel
  merlin-lib.utils
  merlin-lib.query_protocol
  merlin-lib.query_commands
  merlin-lib.ocaml_parsing
  findlib
  findlib.top
  )
 (preprocess
  (per_module
   ((action
     (run %{bin:cppo} -V OCAML:%{ocaml_version} %{input-file}))
    uTop_complete
    uTop))))

(ocamllex toplexer)

(library
 (public_name js_top_worker-web)
 (name js_top_worker_web)
 (modules worker findlibish jslib)
 (preprocess
  (pps js_of_ocaml-ppx))
 (libraries
  js_top_worker
  js_of_ocaml-ppx
  js_of_ocaml-toplevel
  logs.browser
  uri
  angstrom
  findlib
  fpath
  rpclib.json))

(ocamllex uTop_lexer)
