; Worker library

(library
 (public_name js_top_worker)
 (modules toplexer ocamltop impl environment)
 (libraries
  logs
  js_top_worker-rpc
  rpclib-lwt
  js_of_ocaml-compiler
  js_of_ocaml-ppx
  astring
  mime_printer
  compiler-libs.common
  compiler-libs.toplevel
  merlin-lib.kernel
  merlin-lib.utils
  merlin-lib.query_protocol
  merlin-lib.query_commands
  merlin-lib.ocaml_parsing
  findlib
  findlib.top
  ppxlib)
 (js_of_ocaml
  (javascript_files stubs.js))
 (preprocess
  (per_module
   ((action
     (run %{bin:cppo} -V OCAML:%{ocaml_version} %{input-file}))
    uTop_complete
    uTop_compat
    uTop))))

(ocamllex toplexer)

(library
 (public_name js_top_worker-web)
 (name js_top_worker_web)
 (modules worker findlibish jslib)
 (preprocess
  (pps js_of_ocaml-ppx))
 (libraries
  js_top_worker
  js_of_ocaml-ppx
  js_of_ocaml-toplevel
  js_of_ocaml-lwt
  logs.browser
  uri
  angstrom
  findlib
  fpath
  rpclib.json))
