; Test worker - minimal worker for browser tests
(executable
 (name test_worker)
 (modes js)
 (modules test_worker)
 (link_flags (-linkall))
 (preprocess (pps js_of_ocaml-ppx))
 (js_of_ocaml
  (flags (:standard --toplevel))
  (javascript_files ../../lib/stubs.js))
 (libraries js_top_worker-web zarith_stubs_js))

; Test client - exercises js_top_worker_client
(executable
 (name client_test)
 (modes js)
 (modules client_test)
 (preprocess (pps js_of_ocaml-ppx))
 (libraries js_top_worker_client js_of_ocaml lwt astring))

(alias
 (name default)
 (deps client_test.bc.js test_worker.bc.js test.html))
