(executable
 (name node_test)
 (modes byte)
 (modules node_test)
 (link_flags (-linkall))
 (libraries
  fpath
  js_of_ocaml
  js_top_worker-web
  js_of_ocaml-toplevel
  js_top_worker
  logs
  logs.fmt
  rpclib.core
  rpclib.json
  findlib.top
  js_of_ocaml-lwt
  zarith_stubs_js))

(rule
 (targets node_test.js)
 (action
  (run
   %{bin:js_of_ocaml}
   --toplevel
   --pretty
   --no-cmis
   --effects=cps
   --debuginfo
   --target-env=nodejs
   +toplevel.js
   +dynlink.js
   +bigstringaf/runtime.js
   +zarith_stubs_js/runtime.js
   %{lib:js_top_worker:stubs.js}
   %{dep:node_test.bc}
   -o
   %{targets})))

(rule
 (targets
  (dir _opam))
 (action
  (run jtw opam base --no-worker -o _opam)))

(rule
 (deps _opam)
 (action
  (with-outputs-to
   node_test.out
   (run
    node
    --stack-size=2000
    -r
    ./%{dep:import_scripts.js}
    %{dep:node_test.js}))))

(rule
 (alias runtest)
 (deps _opam)
 (action
  (diff node_test.expected node_test.out)))

; Directive test executable
(executable
 (name node_directive_test)
 (modes byte)
 (modules node_directive_test)
 (link_flags (-linkall))
 (libraries
  str
  fpath
  js_of_ocaml
  js_top_worker-web
  js_of_ocaml-toplevel
  js_top_worker
  logs
  logs.fmt
  rpclib.core
  rpclib.json
  findlib.top
  js_of_ocaml-lwt
  zarith_stubs_js))

(rule
 (targets node_directive_test.js)
 (action
  (run
   %{bin:js_of_ocaml}
   --toplevel
   --pretty
   --no-cmis
   --effects=cps
   --debuginfo
   --target-env=nodejs
   +toplevel.js
   +dynlink.js
   +bigstringaf/runtime.js
   +zarith_stubs_js/runtime.js
   %{lib:js_top_worker:stubs.js}
   %{dep:node_directive_test.bc}
   -o
   %{targets})))

(rule
 (deps _opam)
 (action
  (with-outputs-to
   node_directive_test.out
   (run
    node
    --stack-size=2000
    -r
    ./%{dep:import_scripts.js}
    %{dep:node_directive_test.js}))))

(rule
 (alias runtest)
 (deps _opam)
 (action
  (diff node_directive_test.expected node_directive_test.out)))

; PPX test executable
(executable
 (name node_ppx_test)
 (modes byte)
 (modules node_ppx_test)
 (link_flags (-linkall))
 (libraries
  str
  fpath
  js_of_ocaml
  js_top_worker-web
  js_of_ocaml-toplevel
  js_top_worker
  logs
  logs.fmt
  rpclib.core
  rpclib.json
  findlib.top
  js_of_ocaml-lwt
  zarith_stubs_js))

(rule
 (targets node_ppx_test.js)
 (action
  (run
   %{bin:js_of_ocaml}
   --toplevel
   --pretty
   --no-cmis
   --effects=cps
   --debuginfo
   --target-env=nodejs
   +toplevel.js
   +dynlink.js
   +bigstringaf/runtime.js
   +zarith_stubs_js/runtime.js
   %{lib:js_top_worker:stubs.js}
   %{dep:node_ppx_test.bc}
   -o
   %{targets})))

(rule
 (deps _opam)
 (action
  (with-outputs-to
   node_ppx_test.out
   (run
    node
    --stack-size=2000
    -r
    ./%{dep:import_scripts.js}
    %{dep:node_ppx_test.js}))))

(rule
 (alias runtest)
 (deps _opam)
 (action
  (diff node_ppx_test.expected node_ppx_test.out)))

; Environment test executable
(executable
 (name node_env_test)
 (modes byte)
 (modules node_env_test)
 (link_flags (-linkall))
 (libraries
  str
  fpath
  js_of_ocaml
  js_top_worker-web
  js_of_ocaml-toplevel
  js_top_worker
  logs
  logs.fmt
  rpclib.core
  rpclib.json
  findlib.top
  js_of_ocaml-lwt
  zarith_stubs_js))

(rule
 (targets node_env_test.js)
 (action
  (run
   %{bin:js_of_ocaml}
   --toplevel
   --pretty
   --no-cmis
   --effects=cps
   --debuginfo
   --target-env=nodejs
   +toplevel.js
   +dynlink.js
   +bigstringaf/runtime.js
   +zarith_stubs_js/runtime.js
   %{lib:js_top_worker:stubs.js}
   %{dep:node_env_test.bc}
   -o
   %{targets})))

(rule
 (deps _opam)
 (action
  (with-outputs-to
   node_env_test.out
   (run
    node
    --stack-size=2000
    -r
    ./%{dep:import_scripts.js}
    %{dep:node_env_test.js}))))

(rule
 (alias runtest)
 (deps _opam)
 (action
  (diff node_env_test.expected node_env_test.out)))

; MIME output test executable
(executable
 (name node_mime_test)
 (modes byte)
 (modules node_mime_test)
 (link_flags (-linkall))
 (libraries
  str
  fpath
  js_of_ocaml
  js_top_worker-web
  js_of_ocaml-toplevel
  js_top_worker
  logs
  logs.fmt
  rpclib.core
  rpclib.json
  findlib.top
  js_of_ocaml-lwt
  zarith_stubs_js))

(rule
 (targets node_mime_test.js)
 (action
  (run
   %{bin:js_of_ocaml}
   --toplevel
   --pretty
   --no-cmis
   --effects=cps
   --debuginfo
   --target-env=nodejs
   +toplevel.js
   +dynlink.js
   +bigstringaf/runtime.js
   +zarith_stubs_js/runtime.js
   %{lib:js_top_worker:stubs.js}
   %{dep:node_mime_test.bc}
   -o
   %{targets})))

(rule
 (deps _opam)
 (action
  (with-outputs-to
   node_mime_test.out
   (run
    node
    --stack-size=2000
    -r
    ./%{dep:import_scripts.js}
    %{dep:node_mime_test.js}))))

(rule
 (alias runtest)
 (deps _opam)
 (action
  (diff node_mime_test.expected node_mime_test.out)))
